<resources>
    <string name="app_name">tutorial_menu</string>
    <string name="openDrawerContentDesc">Open Drawer</string>
    <string name="closeDrawerContentDesc">Close Drawer</string>
    <string name="guide_tab_introduction">Introduction</string>
    <string name="guide_tab_howto">How-to</string>
    <string name="guide_showcase_start_showcase">Show Me</string>
    <string name="guide_showcase_learn_more">Learn More</string>
    <string name="nav_header_username">Username: %1$s</string>
    <string name="nav_header_uid">UID: %1$s</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_guide">Guide</string>
    <string name="showcase_card1_title">Reminders</string>
    <string name="showcase_card1_subtitle">Sets reminders that alert you</string>
    <string name="showcase_card1_description">
        Customize your reminders with this versatile tool that lets you set personalized alerts for appointments, events, medication timings, and more. Tailor notifications to your schedule, ensuring you never miss an important moment.
    </string>
    <string name="showcase_card2_title">Contacts</string>
    <string name="showcase_card2_subtitle">Sets up contacts for easy access</string>
    <string name="showcase_card2_description">
        Add your contacts and assign photos to each one for easy access. Double-tap a contact\'s button to instantly place a call, making communication quick and personalized.
    </string>
    <string name="showcase_card3_title">Fences</string>
    <string name="showcase_card3_subtitle">Set up geo-fences and receive alerts</string>
    <string name="showcase_card3_description">
        Caregivers can set geo-fences to monitor patient movements, receiving alerts if fences are crossed.
        Patients can view the fences but not modify them, ensuring safety and peace of mind.
    </string>
    <string name="showcase_card4_title">Chat Buddy</string>
    <string name="showcase_card4_subtitle">Talk with a friendly AI</string>
    <string name="showcase_card4_description">Engage in daily banter or ask questions, making your interactions enjoyable and livening up the day.</string>
    <string name="docs_card1_title">Reminders</string>
    <string name="docs_card1_description1">
        The reminders tool will help you create handy notes that alert you based on datetime set by you.
    </string>
    <string name="docs_card1_description2">
        On the reminders tool\'s home screen, you can select the group you want to view currently by selecting the appropriate icon with the group name underneath.
        Thereby, any reminders under the selected group will be displayed. Clicking on any of the reminders will allow you to edit them if necessary.
        If you wish to delete any reminders that you have already done, you can simply click the empty circle next to the reminder.
    </string>
    <string name="docs_card1_description3">
        When you start creating a new Reminder, you can choose to either select a pre-existing group or create a new one.
        This is to provide a way to categorize each Reminder to tailor to your needs, allowing you to sort them accordingly as needed.
    </string>
    <string name="docs_card1_description4">
        The Title of the Reminder will be what is displayed on notifications as well as on the Reminders.
        Subsequently, the Notes section allow you to input any additional information regarding the Reminder.
    </string>
    <string name="docs_card1_description5">
        The Schedule date indicates the deadline of the Reminder, which is the date that the Repeat interval will be based upon.
        An alert is triggered on the day of the Schedule date as well.
    </string>
    <string name="docs_card1_description6">
        The Reminders section allows you to add multiple date and time points, each of which will trigger an alert accordingly as well.
        These date/time points will be automatically re-calculated accordingly if the Reminder has a Repeat interval set.
    </string>
    <string name="docs_card1_description7">
        The Repeat section allows you to select the interval that the Reminder will repeat again based on the Schedule date.
        You can also create a customized repeat interval if necessary.
    </string>
    <string name="docs_card1_description8">
        The Ringtone section allows you to either turn on or off a ringtone that plays when the alert triggers.
        You can also set any .mp3 or .wav file from your system files as the ringtone.
    </string>
    <string name="docs_card2_title">Contacts</string>
    <string name="docs_card2_description1">
        The contacts tool allows you to set contacts that you can easily call by double-tapping the contact portraits.
    </string>
    <string name="docs_card2_description2">
        Clicking on the \"Choose Photo\" allows you to set a photo from your phone gallery for the contact.
    </string>
    <string name="docs_card2_description3">
        The name and phone number will be associated with the contact subsequently.
    </string>
    <string name="docs_card2_description4">
        You can easily edit the contact if necessary by clicking on the \"Edit Contact\" option.
    </string>
    <string name="docs_card3_title">Fences</string>
    <string name="docs_card3_description1">
        The fences tool allows a caregiver account to set up geo-fences with the linked patient, allowing alerts to be sent if the patient leaves the fence.
        It requires the caregiver to link up with a patient first before it can be used.
    </string>
    <string name="docs_card3_description2">
        Linking can be done through the options menu.
    </string>
    <string name="docs_card3_description3">
        The UID must be from a patient account, once confirmed, the patient will receive an invitation to be linked.
    </string>
    <string name="docs_card3_description4">
        The patients UID that is used for linking can be found in the hamburger menu.
    </string>
    <string name="docs_card3_description5">
        The patient will receive an alert which can be accessed from the options menu. Any alerts if the patient leaves the fence is also displayed here.
    </string>
    <string name="docs_card3_description6">
        By clicking on the alert, the patient can choose to either accept or decline the request.
    </string>
    <string name="docs_card3_description7">
        Once linked, the caregiver can create a new fence by clicking on the centre button, and customize by dragging on the map, adjusting the radius as well as adding a tag name.
    </string>
    <string name="docs_card3_description8">
        The caregiver can edit existing fences at anytime by clicking on the \"Manage Fences\" menu.
        Note patients will not be able to edit fences, and can only see them.
        You can also click on the locations in order to jump to them on the map.
    </string>
    <string name="docs_card4_title">Chat Buddy</string>
    <string name="docs_card4_description1">
        Chat buddy allows you to chat with a chat bot
    </string>
    <string name="docs_card4_description2">
        You can set the avatar of the bot to any photo on your phone gallery.
    </string>
    <string name="docs_card4_description3">
        You can also reset the chat if necessary.
    </string>
    <string name="reminders_group_name">Group 1</string>
    <string name="reminders_reminder_title">Do something</string>
    <string name="reminders_reminder_note">Remember something</string>
    <string name="reminders_showcase_options_title">Options</string>
    <string name="reminders_showcase_options_description">You can sort reminders by creation or due date here</string>
    <string name="reminders_showcase_fab_title">Create Reminder</string>
    <string name="reminders_showcase_fab_description">Click here to create a new reminder and set it up</string>
    <string name="reminders_new_reminder_new_group_title">Create A New Group</string>
    <string name="reminders_new_reminder_new_group_description">Click here to create a new group, note reminders must belong to a group.</string>
    <string name="reminders_new_reminder_schedule_title">Schedule deadline</string>
    <string name="reminders_new_reminder_schedule_description">Click here to set the deadline whereby you will receive an alert</string>
    <string name="reminders_new_reminder_reminder_title">Add a new reminder date</string>
    <string name="reminders_new_reminder_reminder_description">This date/time will alert you before the deadline</string>
    <string name="reminders_new_reminder_set_repeat_title">Repeat interval</string>
    <string name="reminders_new_reminder_set_repeat_description">This interval will help you set a new reminder when this reminder\'s deadline is up</string>
    <string name="reminders_new_reminder_set_ringtone_title">Set ringtone</string>
    <string name="reminders_new_reminder_set_ringtone_description">Select ringtone, on/off sound alerts here</string>
    <string name="fences_showcase_options_title">Options</string>
    <string name="fences_showcase_options_description">You can edit fences, link a patient account, or check alerts here</string>
    <string name="fences_showcase_fab_title">Create Fence</string>
    <string name="fences_showcase_fab_description">Click here to create a new fence and set it up</string>
    <string name="contacts_showcase_options_title">Options</string>
    <string name="contacts_showcase_options_description">You can edit your existing contacts here</string>
    <string name="contacts_showcase_fab_title">Add Contact</string>
    <string name="contacts_showcase_fab_description">Click here to add a new contact</string>
    <string name="chatbuddy_showcase_options_title">Options</string>
    <string name="chatbuddy_showcase_options_description">You can change the avatar and reset the chat here</string>
    <string name="chatbuddy_showcase_fab_title">Send Message</string>
    <string name="chatbuddy_showcase_fab_description">Click here to send a message</string>
    <string name="reminders_create_reminder_groups">Groups</string>
    <string name="reminders_create_reminder_title">Title</string>
    <string name="reminders_create_reminder_notes">Notes</string>
    <string name="reminders_create_reminder_schedule">Schedule</string>
    <string name="reminders_create_reminder_repeat">Repeat</string>
    <string name="reminders_create_reminder_ringtone">Ringtone</string>
    <string name="reminders_create_reminder_confirm">Confirm</string>
    <string name="reminders_create_reminder_cancel">Cancel</string>
    <string name="reminders_create_reminder_reminders">Reminders</string>
    <string name="reminders_create_reminder_create_group">Create group</string>
    <string name="reminders_create_new_alert_item">Create new reminder</string>
    <string name="create_group_confirm">Confirm</string>
    <string name="create_group_cancel">Cancel</string>
    <string name="create_group_choose_image">Choose Image</string>
    <string name="create_group_enter_group_name">Enter group name</string>
    <string name="create_contact_enter_name">Enter name</string>
    <string name="create_contact_enter_number">Enter phone number</string>
    <string name="create_contact_confirm">Confirm</string>
    <string name="create_contact_cancel">Cancel</string>
    <string name="create_contact_choose_image">Choose Image</string>
    <string name="create_contact_empty_name">Name field cannot be empty</string>
    <string name="create_contact_empty_number">Number field cannot be empty</string>
    <string name="create_contact_invalid_number">Not a valid phone number</string>
    <string name="edit_contact">Edit contact</string>
    <string name="link_account_enter_uid">Enter UID</string>
    <string name="link_account_confirm">Confirm</string>
    <string name="link_account_cancel">Cancel</string>
</resources>