<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/guide_docs_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/guide_docs_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#963434"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/guide_docs_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/docs_card2_title"
                    android:textSize="30sp" />

                <ImageButton
                    android:id="@+id/guide_docs_button"
                    android:layout_width="17dp"
                    android:layout_height="45dp"
                    android:layout_weight="0.1"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:clickable="false"
                    android:cropToPadding="true"
                    android:focusable="false"
                    app:srcCompat="@drawable/arrow_drop_down" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/guide_docs_description_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/guide_docs_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/docs_card2_description1" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/contacts" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/docs_card2_description2" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/choose_photo" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/docs_card2_description3" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/enter_name_and_phone_number" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/docs_card2_description4" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/edit_contacts1" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/edit_contacts2" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>