<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/guide_docs_card_view"
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/guide_docs_card_margin"
        android:layout_marginVertical="@dimen/guide_docs_card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/guide_docs_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorSurfaceVariant"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/guide_docs_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:clickable="false"
                    android:cropToPadding="true"
                    android:focusable="false"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/arrow_drop_down" />

                <TextView
                    android:id="@+id/guide_docs_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/docs_card1_title"
                    android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/guide_docs_description_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/guide_docs_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description1"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description2"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    android:src="@drawable/home_page" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description3"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    app:srcCompat="@drawable/choose_group" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description4"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    app:srcCompat="@drawable/title" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description5"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    app:srcCompat="@drawable/schedule" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description6"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    app:srcCompat="@drawable/reminders" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description7"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    app:srcCompat="@drawable/repeat" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/guide_docs_innertext_padding"
                    android:text="@string/docs_card1_description8"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/guide_docs_image_margin"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="@dimen/guide_docs_image_padding"
                    app:srcCompat="@drawable/ringtone" />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>